Ensure wide helm chart logos are not cropped in chart list (#486)

--- a/src/frontend/packages/suse-extensions/src/custom/helm/monocular/chart-item/chart-item.component.scss
+++ b/src/frontend/packages/suse-extensions/src/custom/helm/monocular/chart-item/chart-item.component.scss
@@ -9,6 +9,7 @@ $chart-item-logo-width: 80px;
 
   &-logo {
     max-height: 80%;
+    max-width: 80%;
   }
 
   &-info {
